Fix focused entry z-index

--- a/src/renderer/pages/Pile/Posts/Post/Post.module.scss
+++ b/src/renderer/pages/Pile/Posts/Post/Post.module.scss
@@ -6,7 +6,6 @@
 
     &.focused {
         background: var(--bg);
-        z-index: 99;
         box-shadow: 0 30px 80px 40px var(--bg);
     }
 }
